[build-system]
requires = ["setuptools>=65.0", "wheel", "maturin>=1.0,<2.0"]
build-backend = "maturin.build"

[project]
name = "pyvectorhound"
version = "1.0.0"
description = "Diagnostic tool for vector search failures in RAG and LLM systems. Evaluate embedding quality, analyze vector search rank correlation, benchmark BM25 vs semantic search, profile reranker performance. Identify root cause of retrieval failures."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
maintainers = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
    {name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "vector-search",
    "embedding",
    "semantic-search",
    "llm",
    "large-language-models",
    "information-retrieval",
    "search-ranking",
    "evaluation-metrics",
    "bm25",
    "reranking",
    "debugging",
    "diagnostics",
    "nlp",
    "natural-language-processing",
    "similarity-search",
    "faiss",
    "elasticsearch",
    "pinecone",
    "milvus",
    "ai-debugging"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=2.0.0"]
chroma = ["chromadb>=0.4.0"]
milvus = ["pymilvus>=2.3.0"]
weaviate = ["weaviate-client>=3.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
pgvector = ["psycopg2-binary>=2.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "maturin>=1.0.0",
]
all = [
    "pyvectorhound[qdrant,chroma,milvus,weaviate,postgres,pgvector,dev]",
]

[project.urls]
Homepage = "https://github.com/Mullassery/Pyvectorhound"
Repository = "https://github.com/Mullassery/Pyvectorhound"
Documentation = "https://github.com/Mullassery/Pyvectorhound#readme"
"Bug Tracker" = "https://github.com/Mullassery/Pyvectorhound/issues"
Changelog = "https://github.com/Mullassery/Pyvectorhound/releases"
"Source Code" = "https://github.com/Mullassery/Pyvectorhound/tree/main"
Discussions = "https://github.com/Mullassery/Pyvectorhound/discussions"

[tool.maturin]
module-name = "pyvectorhound._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=pyvectorhound --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "RUF"]
